@@ -74,10 +74,10 @@
  ****************************************************************************/
 
 /****************************************************************************
- * Name: cmd_dev
+ * Name: i2ccmd_dev
  ****************************************************************************/
 
-int cmd_dev(FAR struct i2ctool_s *i2ctool, int argc, char **argv)
+int i2ccmd_dev(FAR struct i2ctool_s *i2ctool, int argc, char **argv)
 {
   FAR struct i2c_dev_s *dev;
   struct i2c_msg_s msg[2];
